[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/Level_1_Sprites/Player/player_2_0.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Level_1_Scripts/Player_Level_1.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Level_1_Prefabs/Player/bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/Level_1_Sounds/SoundForFinalGame/Player Sounds/WalkOrRun/Walk_Running_PlayerModel.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/Level_1_Sounds/SoundForFinalGame/Player Sounds/Shoot/Shotgun_semi_aut0_20220331-155854.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/Level_1_Sounds/SoundForFinalGame/Player Sounds/Jump/350898__cabled-mess__jump-c-08 (2).wav" type="AudioStream" id=6]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Player Model/Sprite-0006.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Player Model/Sprite-0004.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Player Model/Sprite-0008.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Player Model/Sprite-0007.png" type="Texture" id=10]
[ext_resource path="res://Prefabs/Level_1_Prefabs/Player/HUD.tscn" type="PackedScene" id=11]
[ext_resource path="res://Prefabs/Level_1_Prefabs/Player/pause_menu.tscn" type="PackedScene" id=12]
[ext_resource path="res://Audio/Level_1_Sounds/SoundForFinalGame/Player Sounds/Hurt/HurtSoundEffectFinalV.wav" type="AudioStream" id=13]
[ext_resource path="res://Audio/Level_1_Sounds/SoundForFinalGame/Player Sounds/DeathSoundsFadeOut/PlayerDeathSound.wav" type="AudioStream" id=14]
[ext_resource path="res://Audio/Level_1_Sounds/SoundForFinalGame/Music/GameOverMusic/GameOverMusic.wav" type="AudioStream" id=15]
[ext_resource path="res://Sprites/Level_1_Sprites_REDO/Player Model/Sprite-0005.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 16 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.5, 36.5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "damage"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0507597, 0.0995954 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "heal"
length = 0.1
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.0784314, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "invuln"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "rest"

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 26.5, 36.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
bullet_scene = ExtResource( 3 )
bullet_spawn_x = 60
bullet_spawn_y = 20

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
flip_h = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 30 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 3 )
animation = "idle"

[node name="rectCollision" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 27.5 )
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="shotgun_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="shot_timer" type="Timer" parent="."]
wait_time = 0.6

[node name="walk_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 0.9
attenuation = 0.0103086

[node name="jump_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 10.0
attenuation = 0.00837324

[node name="invuln_timer" type="Timer" parent="."]
one_shot = true

[node name="effects_animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/damage = SubResource( 5 )
anims/heal = SubResource( 9 )
anims/invuln = SubResource( 6 )
anims/rest = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.5, 27.5 )
shape = SubResource( 8 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="gameover_music_start" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 50.0
editor_draw_drag_margin = true

[node name="HUD" parent="." instance=ExtResource( 11 )]

[node name="pause_menu" parent="." instance=ExtResource( 12 )]

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
attenuation = 0.0507658

[node name="death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
attenuation = 0.032352

[node name="gameover_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="timeout" from="shot_timer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="invuln_timer" to="." method="_on_invuln_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="gameover_music_start" to="." method="_on_gameover_music_start_timeout"]
