[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Level_1_Sprites/Player/player_2_0.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player_Level_1.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Level_1_Prefabs/bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/Level_1_Sounds/Shotgun_semi_auto_20220331-155854.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/temp_assets/walk.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/Level_1_Sounds/350898__cabled-mess__jump-c-08.wav" type="AudioStream" id=6]
[ext_resource path="res://Sprites/Level_1_Sprites/Player/player_2_1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Level_1_Sprites/Player/player_2_2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Level_1_Sprites/Player/player_2_3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Level_1_Sprites/Player/player_2_4.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38, 41.75 )

[sub_resource type="CircleShape2D" id=2]
radius = 43.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
bullet_scene = ExtResource( 3 )
bullet_spawn_y = 10

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
flip_h = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"
flip_h = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="rectCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 22.75 )
shape = SubResource( 1 )

[node name="circle_collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 23 )
shape = SubResource( 2 )

[node name="shotgun_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="shot_timer" type="Timer" parent="."]
wait_time = 0.6

[node name="walk_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0

[node name="jump_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 8.0

[node name="walk_sound_timer" type="Timer" parent="."]
wait_time = 0.67

[connection signal="timeout" from="shot_timer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="walk_sound_timer" to="." method="_on_walk_sound_timer_timeout"]
